[gd_scene load_steps=5 format=3 uid="uid://crgksk5sc0kki"]

[ext_resource type="PackedScene" uid="uid://hq8y2v8wgq2i" path="res://Vyfrost/Components/PauseMenu/PauseMenu.tscn" id="1"]
[ext_resource type="Script" path="res://Vyfrost/Screens/PauseScreen.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://ds5tjv5wj7psu" path="res://Vyfrost/Components/SettingsMenu/SettingsMenu.tscn" id="3"]
[ext_resource type="PackedScene" path="res://Vyfrost/Components/ControlsMenu/ControlsMenu.tscn" id="4"]

[node name="PauseScreen" type="CanvasLayer"]
script = ExtResource("2")

[node name="Backdrop" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 0.733333)

[node name="PauseMenu" parent="Backdrop" instance=ExtResource("1")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = -94.0
offset_right = 70.5
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsMenu" parent="Backdrop" instance=ExtResource("3")]
visible = false
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = -74.5
offset_right = 268.0
offset_bottom = 74.5
grow_horizontal = 1
grow_vertical = 1

[node name="ControlsMenu" parent="Backdrop" instance=ExtResource("4")]
visible = false
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.5
offset_top = -87.5
offset_right = 98.5
offset_bottom = 87.5
